--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,12 @@
+/* Variables */
 @import "./variables.css";
 
+@import "./reset.css";
+
+/*Base Styles */
 @import "./base.css";
 
+/*Section Styles*/
 @import "./sectionStyles/Header.css";
 @import "./sectionStyles/About.css";
 @import "./sectionStyles/Work.css";
