Developed layout of portfolio

--- a/styles/sectionStyles/About.css
+++ b/styles/sectionStyles/About.css
@@ -1,18 +1,19 @@
 .About{
     padding: 2.1rem 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .About__title{
     color: var(--accentYellow);
     text-transform: uppercase;
     font-size: 1.5rem;
-    width: 342px;
+    width: 95%;
     margin: 2.1rem;
 }
 
 .About__imgContainer {
-    width: 342px;
-    height: 342px;
+    width: 95%
     margin: 2.1rem auto;
 }
 
@@ -20,15 +21,15 @@
     width: 100%;
 }
 
-.About__bioContent {
-    width: 342px;
+.About__content {
+    width: 95%
     margin: 2.1rem auto 2.1rem;
 }
 
 .About__subTitle {
     color: var(--accentBlue);
     font-size: 3.2rem;
-    width: 342px;
+    width: 95%;
     margin: 2.1rem auto;
 
 }
@@ -41,7 +42,7 @@
 }
 
 .About__btn {
-    width: 342px;
+    width: 100%;
     padding: 1.5rem 3.5rem;
     background-color: transparent;
     border: 3px solid var(--accentYellow);
