--- a/styles/sectionStyles/Header.css
+++ b/styles/sectionStyles/Header.css
@@ -7,13 +7,45 @@
         ),
         url("./assets/1325192.jpg") center center no-repeat;
         background-size: cover;
+        display: flex;
+        flex-direction: column;
+        position: relative;        
         }
+
+.Header__navbar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
 .Header__logo{
     font-family: "Karla", sans-serif;
     font-weight: 700;
     font-style: italic;
     font-size: 3.2rem;
+    position: relative;
+    width: 100%;
+    text-align: center;
+}
+
+.Header__logo::after {
+    content: " ";
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+    background-color: var(--accentYellow);
+    position: absolute;
+    right: 34%;
+    bottom: 20%;
+}
+
+.Header__navigation {
+    flex-basis: 100%;
+}
+
+.Header__navContent {
+    display: flex;
+    justify-content: center;
 }
 
 .Header__navItem {
@@ -26,9 +58,13 @@
     text-decoration: none;
 }
 
-.Header__highlight{
-    color: var(--accentYellow);
-    font-style: italic;
+.Header__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
+    grid-area: 2 / 1 / -1 / -1;
 }
 
 .Header__title{
@@ -40,6 +76,15 @@
 }
 
 .Header__subTitle{
+    font-size: 3rem;
+}
+
+.Header__highlight{
+    color: var(--accentYellow);
+    font-style: italic;
+    }
+
+.Header__wave {
     font-size: 2rem;
 }
 
