--- a/styles/sectionStyles/Contact.css
+++ b/styles/sectionStyles/Contact.css
@@ -12,9 +12,19 @@
     margin: 2.1rem auto;
 }
 
-.Contact__formContainter {
+.Contact__formContainer {
     width: 95%;
     margin: 0 auto;
+}
+
+.Contact__form {
+    display: flex;
+    flex-direction: column;
+}
+
+.Contact__inputs {
+    display: flex;
+    flex-direction: column;
 }
 
 .Contact__formField,
@@ -45,7 +55,7 @@
 .Contact__message {
     margin-top: 1rem;
     width: 100%;
-    height: 150px;
+    height: 235px;
     border: 3px solid var(--accentYellow);
     border-radius: 0.6rem;
 }
@@ -67,3 +77,23 @@
     background-color: var(--accentYellow);
     border-color: transparent;
 }
+
+@media (min-width: 768px) {
+    .Contact__form {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+  
+    .Contact__inputs {
+      flex-basis: 49%;
+    }
+  
+    .Contact__MessageField {
+      flex-basis: 49%;
+    }
+  
+    .Contact__btn {
+      flex-basis: 100%;
+    }
+  } 
