--- a/styles/sectionStyles/Contact.css
+++ b/styles/sectionStyles/Contact.css
@@ -9,7 +9,7 @@
     text-transform: uppercase;
     font-size: 1.5rem;
     width: 95%;
-    margin: 2.1rem auto;
+    margin: 2.1rem auto 1rem;
 }
 
 .Contact__formContainer {
@@ -36,7 +36,7 @@
     color: var(--accentBlue);
     font-size: 3.2rem;
     width: 95%;
-    margin: 2.1rem auto;
+    margin: 0 auto 2.1rem;
 }
 
 .Contact__label {
@@ -98,6 +98,6 @@
     }
     
   .Contact__formContainer {
-    width: 70%
+    width: 70%;
   }
 } 
