more style tweaks

--- a/styles/sectionStyles/About.css
+++ b/styles/sectionStyles/About.css
@@ -1,7 +1,5 @@
 .About{
     padding: 2.1rem 0;
-    display: flex;
-    flex-direction: column;
 }
 
 .About__content {
@@ -35,7 +33,7 @@
     color: var(--accentBlue);
     font-size: 3.2rem;
     width: 95%;
-    margin: 0 auto 2.1rem auto;
+    margin: 0 auto 2.1rem;
 
 }
 
