--- a/styles/sectionStyles/Work.css
+++ b/styles/sectionStyles/Work.css
@@ -53,7 +53,7 @@
 }
 
 .Work__projectInfo {
-    color: var(--blueOpacity);
+    color: var(--textOpacity);
     font-size: 1.5rem;
     line-height: 1.4;
 }
